# smol_str

./: CHANGELOG.md  Cargo.toml  README.md
.github/: ci.rs
benches/: bench.rs
src/: borsh.rs  lib.rs  revision.rs
tests/: test.rs
