[package]
name = "smol_str"
version = "0.2.3"
description = "small-string optimized string type with O(1) clone"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-analyzer/smol_str"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.136", optional = true, default_features = false }
arbitrary = { version = "1.1.0", optional = true }
revision = { version = "0.7.0", optional = true }
bincode = { version = "1.3.3", optional = true }

[dev-dependencies]
proptest = "1.0.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }

[features]
default = ["std"]
std = ["serde?/std"]
bincode = ["dep:bincode", "std", "serde"]
revision = ["dep:revision", "bincode"]
